--- a/PI-Dogs-main/client/src/components/LandingPage/LandingPage.module.css
+++ b/PI-Dogs-main/client/src/components/LandingPage/LandingPage.module.css
@@ -1,39 +1,38 @@
 body{
-    background-image: url("https://image.freepik.com/free-photo/cute-little-dog-impersonating-business-person_23-2148985938.jpg");
+    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* margin-left: -8px; */
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    /* background-position: center center; background: linear-gradient(#f0ddaa, #a58a40);*/
-    /* position: fixed; */
+    font-family:'Major Mono Display', monospace ;
 }
-h1 { 
-    color: #eec965; 
-    font-family: "Great Vibes", cursive; 
-    font-size: 60px;
-    line-height: 90px; 
+
+.container {
+    position: absolute;
+}
+
+h1 {  
+    color:#fff;
+    font-size:70px;
+    text-align:left;
     font-weight: normal; 
-    margin-bottom: 0px; 
-    margin-top: 40px;
-    text-align: center; 
-    text-shadow: 0 1px 1px #fff; 
+    text-shadow: 6px 6px 4px rgba(44, 11, 34, 0.473);
+    margin-left:50px;
+    margin-top: 50px;
 }
 .bar {
-    align-items: center;
-    padding: 5px 20px 5px 20px;
-    color:white;
-    background-color: rgba(26, 26, 26, 0.849);
+    background-color: rgba(196, 165, 189, 0.438);
+    backdrop-filter: blur(1px);
     border: none;
+    z-index: 4;
+    margin-top: 33%;
+    position: fixed;
+    width: 100%;
+    
 }
 .btn {
     position: relative;
-    display: inline-block;
-    margin-left: 1100px;
-    font-family: "Rouge Script" , cursive;
-    padding: 10px 30px;
+   /*  display: inline-block; */
+    margin-left: 80%;
     color: rgb(255, 255, 255); 
     background-color: transparent;
     border: none;
@@ -42,12 +41,29 @@ h1 {
     text-decoration: none;
     overflow: hidden;
     transition: 0.2; 
-      
-    
+    border-radius: 4px;
+    text-shadow: 4px 4px 3px rgba(44, 11, 34, 0.521);
 } 
 .btn:hover { 
-    background-color: #eec965;
-    box-shadow: 0 0 10px #eec965, 0 0 30px 
-    #eec965, 0 0 30px #eec965;
-    transition-delay: 0.5s;
+    background-color: #fdf6fc5d;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377);
+    transition-delay: 0.2s;
+
 }
+
+
+  video{
+     /*  z-index: -1;
+      object-fit: cover;
+      width: 100vh;
+      height: 100vh; */
+margin:0;
+width:100%;
+height:100vh;
+overflow:hidden;
+object-fit: cover;
+z-index: -1;
+position:fixed;
+  }
+  
+  @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
