--- a/PI-Dogs-main/client/src/components/LandingPage/LandingPage.module.css
+++ b/PI-Dogs-main/client/src/components/LandingPage/LandingPage.module.css
@@ -16,8 +16,7 @@ h1 {
     text-align:left;
     font-weight: normal; 
     text-shadow: 6px 6px 4px rgba(44, 11, 34, 0.473);
-    margin-left:50px;
-    margin-top: 50px;
+    
 }
 .bar {
     background-color: rgba(196, 165, 189, 0.438);
@@ -27,22 +26,21 @@ h1 {
     margin-top: 33%;
     position: fixed;
     width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
     
 }
 .btn {
-    position: relative;
-   /*  display: inline-block; */
-    margin-left: 80%;
+    
     color: rgb(255, 255, 255); 
     background-color: transparent;
     border: none;
     letter-spacing:4px;
-    font-size: 24px;
+    font-size: 30px;
     text-decoration: none;
-    overflow: hidden;
-    transition: 0.2; 
-    border-radius: 4px;
     text-shadow: 4px 4px 3px rgba(44, 11, 34, 0.521);
+    margin-bottom: 20px;
 } 
 .btn:hover { 
     background-color: #fdf6fc5d;
@@ -53,17 +51,13 @@ h1 {
 
 
   video{
-     /*  z-index: -1;
-      object-fit: cover;
-      width: 100vh;
-      height: 100vh; */
-margin:0;
-width:100%;
-height:100vh;
-overflow:hidden;
-object-fit: cover;
-z-index: -1;
-position:fixed;
+    margin:0;
+    width:100%;
+    height:100vh;
+    overflow:hidden;
+    object-fit: cover;
+    z-index: -1;
+    position:fixed;
   }
   
   @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
