--- a/PI-Dogs-main/client/src/components/DogCreated/DogCreated.module.css
+++ b/PI-Dogs-main/client/src/components/DogCreated/DogCreated.module.css
@@ -1,122 +1,142 @@
 .content {
     display: flex;
     flex-direction: column;
-    /* background-color: rgba(165, 42, 42, 0.918); */
-    /* background-color: transparent; */
-    /* color: wheat; */
     border-radius: 3px;
-    padding-left: 3px;
-    padding-bottom: 3px;
+    /* padding-left: 4px;
+    padding-bottom: 3px; */
     font-weight: bolder;
+    margin-top:30px;
     
 }
-.temptContainer { 
-    background-color: #ffffff78;  
-    /* list-style:none; */
-    /* display: grid; */
-    /* grid-template-columns: repeat(6, 1fr); */
-    /* justify-items: center; */
-    color: #ebbb37;
-    font-weight: bolder;
-    position: relative; left:42%; bottom: -5%;
-    margin-top: 30px; 
-    width: 15%;
-    padding-bottom: 5px;
-    margin-right: 10px;
-    text-shadow: 0 1px 1px rgb(12, 12, 12);
-    
-    /* position: absolute; */
-    
-}
-.legend{
-    color: #ebbb37; 
-    font-family: "Great Vibes", cursive; 
-    font-size: 60px;
-    line-height: 90px; 
-    font-weight: normal; 
-    margin-bottom: 0px; 
-    margin-top: 40px;
-    text-align: center; 
-    text-shadow: 0 1px 1px rgb(12, 12, 12); 
+fieldset{
+    outline: none;
+    border: none;
+   /*  background-color: rgba(229, 188, 211, 0.425); */
+   /*  backdrop-filter: blur 5px; */
+ 
 }
 
-.l {
-   background-color: #ddd4d478;  
-   color: #ebbb37;
-   text-shadow: 0 1px 1px rgb(12, 12, 12);  
-   text-decoration: none;
-       
+.title{
+    font-weight: 20px;
+    font-family:'Major Mono Display', monospace ;
+    color:#fff;
+    text-shadow: 4px 4px 3px rgba(44, 11, 34, 0.582);
+    font-size: 50px;
+    font-weight:bolder;
 }
+.title:hover{
+    text-shadow: 4px 4px 3px rgba(226, 149, 200, 0.582);   
+}
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+.temptContainer { 
+    background-color: #ffffff78;  
+    color: rgb(66, 2, 45);
+   width: 170px;
+   margin-top: -25px;
+   margin-left: 100px;
+   height: 25px;
+   
+ 
+    
+}
+
+.temptContainer:hover{
+    background-color: #f1bce073;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377);
+}
+body{ background-image: url(../../media/patitas.jpg);
+    background-position: center; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh; }
+.all{
+    
+    position: absolute;
+    margin-left: 550px;
+    margin-top: 100px;
+    width: 400px;
+    height: 450px;
+    outline: none;
+    border-radius: 15px;
+    background-color: rgba(229, 188, 211, 0.425);
+    backdrop-filter: blur 5px;
+    ;
+    box-shadow: 0 0 10px rgba(44, 11, 34, 0.404), 0 0 10px rgba(44, 11, 34, 0.404), 0 0 10px rgba(44, 11, 34, 0.404);
+}
+.all:hover{
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377)
+}
+
 .input {
     border: none;  
     cursor: pointer; 
     padding: 5px;
-    margin-top: 10px; 
+    margin-top: 5px; 
     border-radius: 5px;
+    background-color: #fdf6fc73;
     color: rgb(161, 161, 161);
 }
 .input:hover{
-    background-color: #ebbb37;
-    
+    background-color: #f1bce073;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377);
+
 }
-/* .maxmin{
-    width: 75px;
-    margin-left: 2px;
-    margin-right: 1px;
-    border: none;  
-    cursor: pointer; 
-    padding: 4px;
-    margin-top: 10px; 
-    border-radius: 5px;
-    color: rgb(146, 144, 144);
-} */
-.maxmin:hover{
-    background-color: #ebbb37;
-    
+
+.input:focus{
+    outline: none;
 }
+
 .submit{
-    position: relative; left: 50%; bottom: -5%;
-    width: 15%;
-    font-family:Georgia;
-    background: linear-gradient(#f0ddaa, #a58a40);
-    border: none; 
-    text-transform: uppercase; 
-    cursor: pointer; 
-    padding: 15px;
-    margin-top: 30px; 
-    border-radius: 5px;
-    color: solid black;
-    border-color: solid black;  
-    font-weight: 700; 
+    z-index: 4px;
+   border: none;
+    font-family: 'Montserrat Alternates', sans-serif;
+    background-color: #c485baa2;
+    color: white;
+    border-radius: 10px;
+    text-align:center;
+    cursor: pointer;
+    width: 70px;
+    height: 30px;
+    z-index: 4;
+    margin-right: 200px;
     
 }
 .submit:hover{
-    color: rgb(255, 249, 249);
-    border-color: solid black;
-    background-color: transparent;
+    background-color: #fdf6fc73;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377);
+    border: none;
+    color: rgb(66, 2, 45);
+    width: 75px;
+    height: 35px;
+    transition: 0.8s;
 }
 
 .back{
-    position: relative; right: 49%; bottom: -5%;    
-    font-family:Georgia;
-    color: solid black;
-    border-color: solid black;
-    text-transform: uppercase;
-   
-    background: linear-gradient(#f0ddaa, #a58a40);
-    border-radius: 9px;
-    margin-top: 15px;
-    margin-left: 10px;
-    color: solid black;
-    font-size: 13px;
-    font-weight: 800;
-    width: 200px;
-    height: 50px;
-    
+     z-index: 4px;
+    border: none;
+    font-family: 'Montserrat Alternates', sans-serif;
+    background-color: #c485baa2;
+    color: white;
+    border-radius: 10px;
+    text-align:center;
+    cursor: pointer;
+    width: 70px;
+    height: 30px;
+    z-index: 4;
 
 } 
+.back:hover{
+    background-color: #fdf6fc73;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377);
+    border: none;
+    color: rgb(66, 2, 45);
+    width: 75px;
+    height: 35px;
+    transition: 0.8s;
+}
 .li{
     list-style:none; 
-    color: #ebbb37;
-
+color: rgb(66, 2, 45);
+margin-top: -10px;
 }
