--- a/PI-Dogs-main/client/src/components/Card/Card.module.css
+++ b/PI-Dogs-main/client/src/components/Card/Card.module.css
@@ -6,7 +6,7 @@ body{
     margin-left:35px;
     justify-content: center;
     background-color: #fdf6fc73;
-    border-radius: 10px;
+    border-radius: 7%;
     height: 260px;
     width: 240px;
     align-items: center;
@@ -46,6 +46,7 @@ body{
     
 }
 .overlay{
+   
     position: absolute;
     bottom: 0;
     left: 0;
@@ -59,12 +60,18 @@ body{
     border-radius: 7%;
     backdrop-filter: blur 4px;
     font-weight:80px;
+    text-align: left;
+    
     
 }
-
+.text{
+    margin-top: 10px;
+    margin-left: 10px;
+}
 .box:hover .overlay{
     height: 100%;
     box-shadow: 0 0 10px rgba(128, 67, 85, 0.863), 0 0 10px rgba(128, 67, 85, 0.863), 0 0 10px rgba(128, 67, 85, 0.863);
+    transition: 0.5s
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap');
