--- a/PI-Dogs-main/client/src/components/DogCreated/DogCreated.module.css
+++ b/PI-Dogs-main/client/src/components/DogCreated/DogCreated.module.css
@@ -4,9 +4,14 @@
     border-radius: 3px;
     /* padding-left: 4px;
     padding-bottom: 3px; */
-    font-weight: bolder;
-    margin-top:30px;
-    
+    font-weight: bold;
+    margin-top:7px;
+    width: 180px;
+    height: 80px;
+    margin-left: 90px;
+}
+.tempSelect{
+    margin-top: 10px;
 }
 fieldset{
     outline: none;
@@ -15,8 +20,11 @@ fieldset{
    /*  backdrop-filter: blur 5px; */
  
 }
-
+form{
+    margin-top: 20px;
+}
 .title{
+    
     font-weight: 20px;
     font-family:'Major Mono Display', monospace ;
     color:#fff;
@@ -28,35 +36,21 @@ fieldset{
     text-shadow: 4px 4px 3px rgba(226, 149, 200, 0.582);   
 }
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
-.temptContainer { 
-    background-color: #ffffff78;  
-    color: rgb(66, 2, 45);
-   width: 170px;
-   margin-top: -25px;
-   margin-left: 100px;
-   height: 25px;
-   
- 
-    
-}
 
-.temptContainer:hover{
-    background-color: #f1bce073;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377);
-}
 body{ background-image: url(../../media/patitas.jpg);
     background-position: center; 
     background-size: cover;
     background-repeat: no-repeat;
     width: 100vw;
     height: 100vh; }
+    
 .all{
     
     position: absolute;
     margin-left: 550px;
-    margin-top: 100px;
+    margin-top: 50px;
     width: 400px;
-    height: 450px;
+    height: 600px;
     outline: none;
     border-radius: 15px;
     background-color: rgba(229, 188, 211, 0.425);
@@ -67,7 +61,10 @@ body{ background-image: url(../../media/patitas.jpg);
 .all:hover{
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377)
 }
-
+.minMax input{
+    width: 70px;
+    margin: 7px;
+}
 .input {
     border: none;  
     cursor: pointer; 
@@ -98,7 +95,7 @@ body{ background-image: url(../../media/patitas.jpg);
     cursor: pointer;
     width: 70px;
     height: 30px;
-    z-index: 4;
+    margin-top: 100px;
     margin-right: 200px;
     
 }
@@ -113,7 +110,6 @@ body{ background-image: url(../../media/patitas.jpg);
 }
 
 .back{
-     z-index: 4px;
     border: none;
     font-family: 'Montserrat Alternates', sans-serif;
     background-color: #c485baa2;
@@ -135,8 +131,22 @@ body{ background-image: url(../../media/patitas.jpg);
     height: 35px;
     transition: 0.8s;
 }
-.li{
-    list-style:none; 
-color: rgb(66, 2, 45);
-margin-top: -10px;
+
+.btnTemp{
+    width: 25px;
+   margin-left: 20px;
+   border: none;
+   font-family: 'Montserrat Alternates', sans-serif;
+   background-color: #c485baa2;
+   color: white;
+   border-radius: 5px;
+   text-align:center;
+   cursor: pointer;
+}
+.btnTemp:hover{
+    background-color: #fdf6fc73;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377), 0 0 10px rgba(255, 255, 255, 0.377);
+    border: none;
+    color: rgb(66, 2, 45);
+    transition: 0.8s;
 }
