--- a/PI-Dogs-main/client/src/components/Card/Card.module.css
+++ b/PI-Dogs-main/client/src/components/Card/Card.module.css
@@ -6,9 +6,9 @@ body{
     margin-left:35px;
     justify-content: center;
     background-color: #fdf6fc73;
-    border-radius: 7%;
-    height: 260px;
-    width: 240px;
+    border-radius: 7%  7% 3% 3%;
+    height: 240px;
+    width: 220px;
     align-items: center;
     position: relative;
     z-index: 1;
@@ -16,13 +16,12 @@ body{
 }
 .breed {
     text-decoration: 'none';
-    font-size: 15px;
+    font-size: 12px;
     color: rgb(116, 3, 78);
     font-weight: 20px;
     font-family: 'Montserrat Alternates', sans-serif;
     text-align: center;
-    padding-top: 5px;
-    margin-top: 15px;
+    margin-top: 7px;
     height: 30px;
     width: 240px;
     z-index: 1;
