--- a/PI-Dogs-main/client/src/components/Home/Home.module.css
+++ b/PI-Dogs-main/client/src/components/Home/Home.module.css
@@ -1,13 +1,12 @@
 
 .containsAll{
-    font-family: 'Montserrat Alternates', sans-serif;
     background-image: url(../../media/smile.png);
-  background-position: center; 
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%; 
-  background-color: rgb(252, 225, 238);
+    background-position: center; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%; 
+position:fixed;
 
 }
 .nav{
@@ -15,6 +14,7 @@
     backdrop-filter: blur(1px);
     margin-top: 0;
     height:150px;
+    position: sticky;
     
 }
 
@@ -148,6 +148,10 @@ select:hover{
     display: flex;
     align-items: center;
 }
+.btnBack{
+    margin-top: -48px;
+    margin-right: -90%;
+}
 .back{
     z-index: 4px;
     border: none;
@@ -160,6 +164,7 @@ select:hover{
     width: 70px;
     height: 30px;
     z-index: 4;
+    
 }
 .back:hover{
     background-color: #fdf6fc73;
